feat: Enhance Class Subject management by adding 'Is Required' field and edit functionality in modal

--- a/src/app/pages/school/configuration/classes/classes.component.html
+++ b/src/app/pages/school/configuration/classes/classes.component.html
@@ -137,10 +137,10 @@
                                     [headers]="classSubjectHeaders" 
                                     [data]="classSubjects" 
                                     [showActions]="true" 
-                                    [showEdit]="false"
+                                    (editClicked)="editClassSubjectModal(updateOrAddClassSubjectContent, $event)"
                                     (deleteClicked)="deleteClassSubject($event)"
                                     tableId="classSubjectTable"
-                                    [customTemplates]="{ 'isActive': classSubjectStatusTemplate, 'subjectId': subjectTemplate, 'overrideDefaultCoefficient': overrideDefaultCoefficientTemplate }">
+                                    [customTemplates]="{ 'isActive': classSubjectStatusTemplate, 'subjectId': subjectTemplate, 'overrideDefaultCoefficient': overrideDefaultCoefficientTemplate, 'isRequired': isRequiredTemplate }">
                                     </generic-app-table>
 
                                     <ng-template #classSubjectStatusTemplate let-status let-row="row">
@@ -155,6 +155,10 @@
 
                                     <ng-template #overrideDefaultCoefficientTemplate let-overrideDefaultCoefficient let-row="row">
                                         <span>{{ getYesOrNoLabel(overrideDefaultCoefficient) }}</span>
+                                    </ng-template>
+
+                                    <ng-template #isRequiredTemplate let-isRequired let-row="row">
+                                        <span>{{ getYesOrNoLabel(isRequired) }}</span>
                                     </ng-template>
 
                                 </div>
@@ -340,6 +344,15 @@
                     <label for="coefficient" class="form-label">Coefficient</label>
                     <input type="number" id="coefficient" class="form-control" placeholder="Enter Coefficient" formControlName="coefficient" [ngClass]="{ 'is-invalid': submittedClassSubject && classSubjectF['coefficient'].invalid }">
                     <div class="invalid-feedback" *ngIf="submittedClassSubject && classSubjectF['coefficient'].invalid">Coefficient required when 'Override Default Coefficient' is set to Yes</div>
+                </div>
+                <div class="mb-3">
+                    <label class="form-label mb-0">Is Required <span class="text-danger">*</span></label>
+                    <select class="form-select" aria-label=".form-select-sm" formControlName="isRequired" [ngClass]="{ 'is-invalid': submittedClassSubject && classSubjectF['isRequired'].invalid }">
+                        <option selected [ngValue]="null">Select</option>
+                        <option [ngValue]="true">Yes</option>
+                        <option [ngValue]="false">No</option>
+                    </select>
+                    <div class="invalid-feedback" *ngIf="submittedClassSubject && classSubjectF['isActive'].invalid">Please select an option</div>
                 </div> 
                 <div class="mb-3">
                     <label class="form-label mb-0">Is Active <span class="text-danger">*</span></label>
