--- a/src/app/pages/school/configuration/classes/classes.component.html
+++ b/src/app/pages/school/configuration/classes/classes.component.html
@@ -33,9 +33,7 @@
                                     </generic-app-table>
 
                                     <ng-template #statusTemplate let-status let-row="row">
-                                        <div class="status">
-                                            <span class="badge text-uppercase" [ngClass]="{ 'bg-success-subtle text-success': status === true, 'bg-danger-subtle text-danger': status !== true }">{{ getActiveOrInactiveLabel(status) }}</span>
-                                        </div>
+                                        <app-status-badge [status]="status" [label]="getActiveOrInactiveLabel(status)"></app-status-badge>
                                     </ng-template>
                                 </div>
                             </div>
