--- a/src/app/pages/school/configuration/subjects/subjects.component.html
+++ b/src/app/pages/school/configuration/subjects/subjects.component.html
@@ -17,8 +17,7 @@
             </div>
 
           <app-loading [loading]="loading"></app-loading>
-
-            
+          
             <generic-app-table 
                 [headers]="headers" 
                 [data]="subjects" 
@@ -28,11 +27,9 @@
                 (editClicked)="editModal(content, $event)">
             </generic-app-table>
 
-                <ng-template #statusTemplate let-status let-row="row">
-                    <div class="status">
-                        <span class="badge text-uppercase" [ngClass]="{ 'bg-success-subtle text-success': status === true, 'bg-danger-subtle text-danger': status !== true }">{{ getActiveOrInactiveLabel(status) }}</span>
-                    </div>
-                </ng-template>
+            <ng-template #statusTemplate let-status let-row="row">
+                <app-status-badge [status]="status" [label]="getActiveOrInactiveLabel(status)"></app-status-badge>
+            </ng-template>
         </div>
     </div>
     <ng-template #content role="document" let-modal>
