--- a/src/app/pages/school/configuration/academics/academic-terms/academic-terms.component.html
+++ b/src/app/pages/school/configuration/academics/academic-terms/academic-terms.component.html
@@ -1,7 +1,7 @@
 <app-breadcrumbs title="Academic Terms" [breadcrumbItems]="breadCrumbItems"></app-breadcrumbs>
 <div class="row">
     <div class="col-lg-12">
-        <div class="card" id="academicTerms">
+        <div class="card">
             <div class="card-header border-bottom-dashed">
                 <div class="row g-4 align-items-center">
                     <div class="col-sm">
