--- a/src/app/pages/school/configuration/classes/classes.component.html
+++ b/src/app/pages/school/configuration/classes/classes.component.html
@@ -81,9 +81,7 @@
                                     </generic-app-table>
 
                                     <ng-template #classExamTypeStatusTemplate let-status let-row="row">
-                                        <div class="status">
-                                            <span class="badge text-uppercase" [ngClass]="{ 'bg-success-subtle text-success': status === true, 'bg-danger-subtle text-danger': status !== true }">{{ getActiveOrInactiveLabel(status) }}</span>
-                                        </div>
+                                        <app-status-badge [status]="status" [label]="getActiveOrInactiveLabel(status)"></app-status-badge>
                                     </ng-template>
 
                                     <ng-template #examTypeTemplate let-examTypeId let-row="row">
@@ -142,9 +140,7 @@
                                     </generic-app-table>
 
                                     <ng-template #classSubjectStatusTemplate let-status let-row="row">
-                                        <div class="status">
-                                            <span class="badge text-uppercase" [ngClass]="{ 'bg-success-subtle text-success': status === true, 'bg-danger-subtle text-danger': status !== true }">{{ getActiveOrInactiveLabel(status) }}</span>
-                                        </div>
+                                        <app-status-badge [status]="status" [label]="getActiveOrInactiveLabel(status)"></app-status-badge>
                                     </ng-template>
 
                                     <ng-template #subjectTemplate let-subjectId let-row="row">
