--- a/src/app/pages/school/configuration/grading/grading-systems/grading-systems.component.html
+++ b/src/app/pages/school/configuration/grading/grading-systems/grading-systems.component.html
@@ -1,2 +1,74 @@
 <app-breadcrumbs title="Grading Systems" [breadcrumbItems]="breadCrumbItems"></app-breadcrumbs>
 
+<div class="row">
+    <div class="col-lg-12">
+            <div class="card">
+                <div  class="card-header border-bottom-dashed">
+                    <div class="row g-4 align-items-center">
+                        <div class="col-sm">
+                            <div><h5 class="card-title mb-0"><i class="ri-artboard-line text-muted fs-18 align-middle me-1">   </i>Grading System</h5></div>
+                        </div>
+                        <div class="col-sm-auto">
+                            <div class="d-flex flex-wrap align-items-start gap-2">
+                                <button class="btn btn-primary add-btn" data-bs-toggle="modal" data-bs-target="#showModal" (click)="addModal(content)"><i class="ri-add-line align-bottom me-1"></i> Create Grading System</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <generic-app-table 
+                [headers]="headers" 
+                [data]="gradingSystems" 
+                [showActions]="true" 
+                [showDelete]="false" 
+                [customTemplates]="{ 'isActive': gradingSystemStatusTemplate}"
+                (editClicked)="editModal(content, $event)">
+                </generic-app-table>
+
+                <ng-template #gradingSystemStatusTemplate let-status let-row="row">
+                    <app-status-badge [status]="status" [label]="getActiveOrInactiveLabel(status)"></app-status-badge>
+                </ng-template>
+
+            </div>
+     </div>
+     <app-loading [loading]="loading"></app-loading>
+    <ng-template #content role="document" let-modal>
+        <div class="modal-header p-3 bg-light">
+            <h5 class="modal-title">{{isCreateMode ? "Create" : "Update"}} Grading System</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" id="close-modal" (click)="dismissModal()"></button>
+        </div>
+        <form  class="tablelist-form" autocomplete="off" [formGroup]="gradingSystemForm" (ngSubmit)="onSubmit()">
+            <div class="modal-body">
+                <div class="mb-3">
+                    <label for="name" class="form-label">Name <span class="text-danger">*</span></label>
+                    <input type="text" id="name" class="form-control" placeholder="Enter Grading System Name" required formControlName="name" [ngClass]="{ 'is-invalid': submitted && form['name'].errors }" />
+                    <div class="invalid-feedback">Please enter a name</div>
+                </div>
+                <div class="mb-3">
+                    <label for="scale" class="form-label">Scale</label>
+                    <input type="number" id="scale" class="form-control" placeholder="Enter Scale" formControlName="scale" [ngClass]="{ 'is-invalid': submitted && form['scale'].invalid }">
+                    <div class="invalid-feedback">Scale is required</div>
+                </div>
+                <div class="mb-3">
+                    <label for="gradingScale" class="form-label">Grading Scale</label>
+                    <input type="number" id="gradingScale" class="form-control" placeholder="Enter Grading Scale" formControlName="gradingScale" [ngClass]="{ 'is-invalid': submitted && form['gradingScale'].invalid }">
+                    <div class="invalid-feedback">Grading scale is required</div>
+                </div>
+                <div class="mb-3">
+                    <label class="form-label mb-0">Is Active <span class="text-danger">*</span></label>
+                    <select class="form-select" aria-label=".form-select-sm" formControlName="isActive" [ngClass]="{ 'is-invalid': submitted && form['isActive'].invalid }">
+                        <option selected [ngValue]="null">Select status</option>
+                        <option [ngValue]="true">Yes</option>
+                        <option [ngValue]="false">No</option>
+                    </select>
+                    <div class="invalid-feedback">Please select an option</div>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <div class="hstack gap-2 justify-content-end">
+                    <button type="button" class="btn btn-light" data-bs-dismiss="modal" (click)="dismissModal()">Close</button>
+                    <button type="submit" class="btn btn-primary" id="add-btn">Save</button>
+                </div>
+            </div>
+        </form>
+    </ng-template>
+</div>
