--- a/src/app/pages/school/configuration/sections/sections.component.html
+++ b/src/app/pages/school/configuration/sections/sections.component.html
@@ -11,7 +11,7 @@
                       <ng-template ngbNavContent>
                         <div class="row">
                             <div class="col-lg-12">
-                                <div class="card" id="classSectionList">
+                                <div class="card">
                                     <div  class="card-header border-bottom-dashed">
                                         <div class="row g-4 align-items-center">
                                             <div class="col-sm">
@@ -45,7 +45,7 @@
 
     <ng-template #content role="document" let-modal>
         <div class="modal-header p-3 bg-light">
-            <h5 class="modal-title" id="modalLabel">{{isCreateMode ? "Create" : "Update"}} Class Section</h5>
+            <h5 class="modal-title">{{isCreateMode ? "Create" : "Update"}} Class Section</h5>
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" id="close-modal" (click)="dismissModal()"></button>
         </div>
         <form  class="tablelist-form" autocomplete="off" [formGroup]="classSectionForm" (ngSubmit)="onSubmit()">
