--- a/src/app/pages/school/configuration/grading/grading-systems/grading-systems.component.html
+++ b/src/app/pages/school/configuration/grading/grading-systems/grading-systems.component.html
@@ -10,7 +10,7 @@
                         </div>
                         <div class="col-sm-auto">
                             <div class="d-flex flex-wrap align-items-start gap-2">
-                                <button class="btn btn-primary add-btn" data-bs-toggle="modal" data-bs-target="#showModal" (click)="addModal(content)"><i class="ri-add-line align-bottom me-1"></i> Create Grading System</button>
+                                <button class="btn btn-primary add-btn" data-bs-toggle="modal" data-bs-target="#showModal" (click)="addModal(content)"><i class="ri-add-line align-bottom me-1"></i> Create System</button>
                             </div>
                         </div>
                     </div>
