--- a/src/app/pages/school/configuration/admission/admission.component.html
+++ b/src/app/pages/school/configuration/admission/admission.component.html
@@ -36,7 +36,7 @@
                                 <div class="col-lg-12">
                                     <div class="hstack gap-2 justify-content-end">
                                         <button type="submit" class="btn btn-primary">Save</button>
-                                        <button type="button" class="btn btn-warning" (click)="resetAdmissionForm()">Reset</button>
+                                        <!-- <button type="button" class="btn btn-warning" (click)="resetAdmissionForm()">Reset</button> -->
                                     </div>
                                 </div>
                             </div>
