--- a/src/app/pages/school/students/student-registration/student-registration.component.html
+++ b/src/app/pages/school/students/student-registration/student-registration.component.html
@@ -1,1 +1,137 @@
 <app-breadcrumbs title="Registration" [breadcrumbItems]="breadCrumbItems"></app-breadcrumbs>
+
+<div class="row">
+    <div class="col-lg-12">
+        <div class="card">
+            <div class="card-header border-bottom-dashed">
+                <div class="row g-4 align-items-center">
+                    <div class="col-sm">
+                        <div><h5 class="card-title mb-0"><i class="ri-pencil-ruler-line text-muted fs-18 align-middle me-1">     </i>Student Registration</h5></div>
+                    </div>
+                    <div class="col-sm-auto">
+                        <div class="d-flex flex-wrap align-items-start gap-2">
+                            <button type="button" class="btn btn-primary add-btn" data-bs-toggle="modal" id="create-btn" data-bs-target="#showModal" (click)="addModal(content)"><i class="ri-user-add-line align-bottom me-1"></i> Register Student</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            
+            <generic-paginated-app-table
+             apiUrl="v1/students/batch"
+            [headers]="headers"
+            [showActions]="true"
+            (editClicked)="editModal(content, $event)"
+            [showRowSelect]="true"
+            [showDelete]="false"
+            [reload]="reloadTable"
+            [customTemplates]="{ 'sex': sexTemplate, 'dateOfBirth': dateOfBirthTemplate }"
+            (selectedRowsChange)="onSelectedRowsChange($event)">
+            
+            <ng-template #sexTemplate let-value>{{getSexLabel(value)}}</ng-template>
+            <ng-template #dateOfBirthTemplate let-value>{{value | date: 'longDate'}}</ng-template>
+            </generic-paginated-app-table>
+        </div>
+    </div>
+
+    <app-loading [loading]="loading"></app-loading>
+    <ng-template #content role="document" let-modal>
+        <div class="modal-header p-3 bg-light">
+            <h5 class="modal-title">{{isCreateMode ? "Create" : "Update"}} Student</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" id="close-modal" (click)="dismissModal()"></button>
+        </div>
+        
+        <div class="col-xxl-12">
+            <div class="card">
+                <div class="card-body modal-body">
+                    <div class="row">
+                        <div class="col-md-3">
+                          <ul ngbNav #verticalNav="ngbNav" [activeId]="1" class="nav flex-column nav-pills text-center">
+                            <li [ngbNavItem]="1">
+                                <a ngbNavLink class="mb-2">
+                                    <span class="d-sm-block">General</span>
+                                </a>
+                                <ng-template ngbNavContent>
+                                  <div class="mb-0">
+                                      <form  class="tablelist-form" autocomplete="off" [formGroup]="studentForm">
+                                            <div class="mb-3">
+                                                <label for="familyName" class="form-label">Family Name <span class="text-danger">*</span></label>
+                                                <input  type="text" id="familyName" class="form-control" placeholder="Enter Family Name" formControlName="familyName" required [ngClass]="{ 'is-invalid': submitted && fStudent['familyName'].invalid }">
+                                                <div class="invalid-feedback">Family name is required</div>
+                                            </div>
+                                            <div class="mb-3">
+                                                <label for="givenNames" class="form-label">Given Names <span class="text-danger">*</span></label>
+                                                <input  type="text" id="givenNames" class="form-control" placeholder="Enter Given Names" formControlName="givenNames" required [ngClass]="{ 'is-invalid': submitted && fStudent['givenNames'].invalid }">
+                                                <div class="invalid-feedback">Given name(s) is(are) required</div>
+                                            </div>
+                                            <div class="mb-3">
+                                                <label class="form-label mb-0">Date Of Birth <span class="text-danger">*</span></label>
+                                                <input class="form-control flatpickr-input" type="text" mwlFlatpickr [altInput]="true" [convertModelValue]="true" altFormat="F j, Y" dateFormat="Y-m-d" required formControlName="dateOfBirth" [ngClass]="{ 'is-invalid': submitted && fStudent['dateOfBirth'].errors }" placeholder="Select Date of Birth" />
+                                                <div class="invalid-feedback">Date of birth is required</div>
+                                             </div>
+                                             <div class="mb-3">
+                                                <label for="sex" class="form-label">Gender <span class="text-danger">*</span></label>
+                                                <select id="sex" class="form-select" formControlName="sex" [ngClass]="{ 'is-invalid': submitted && fStudent['sex'].errors }">
+                                                  <option [ngValue]="null" disabled selected>Select Gender </option>
+                                                  <option *ngFor="let sex of sexOptions" [value]="sex.dataCode">{{ sex.text }}</option>
+                                                </select>
+                                                <div class="invalid-feedback">Sex is required</div>
+                                            </div>
+                                            <div class="mb-3">
+                                                <label for="admissionNumber" class="form-label">Admission Number</label>
+                                                <input  type="text" id="admissionNumber" class="form-control" placeholder="Enter Admission Number" formControlName="admissionNumber">
+                                            </div>
+                                    </form>
+                                  </div>
+                                </ng-template>
+                            </li>
+                            <li [ngbNavItem]="2">
+                                <a ngbNavLink class="mb-2">
+                                    <span class="d-sm-block">Address</span>
+                                </a>
+                                <ng-template ngbNavContent>
+                                    <form [formGroup]="addressForm">
+                                        <div class="mb-3">
+                                            <label class="form-label">Country</label>
+                                            <ng-select [items]="countries" bindLabel="name" id="country" bindValue="id" formControlName="countryId" placeholder="Select a country"></ng-select>
+                                        </div>
+                                        <div class="mb-3">
+                                            <label for="addressLine1" class="form-label">Address Line 1</label>
+                                            <input type="text" class="form-control" id="addressLine1" placeholder="Enter Address Line 1" formControlName="addressLine1">
+                                        </div>
+                                        <div class="mb-3">
+                                            <label for="addressLine2" class="form-label">Address Line 2</label>
+                                            <input type="text" class="form-control" id="addressLine2" placeholder="Enter Address Line 2" formControlName="addressLine2">
+                                        </div>
+                                        <div class="mb-3">
+                                            <label for="postalCode" class="form-label">Postal Code</label>
+                                            <input type="text" class="form-control" id="postalCode" placeholder="Enter Postal Code" formControlName="postalCode">
+                                        </div>
+                                        <div id="newForm" style="display: none;"></div>
+                                    </form>
+                                </ng-template>
+                            </li>
+                            <li [ngbNavItem]="3" *ngIf="isCreateMode">
+                                <a ngbNavLink class="mb-2">
+                                    <span class="d-sm-block">Enrollment</span>
+                                </a>
+                                <ng-template ngbNavContent>
+                                 
+                                </ng-template>
+                            </li>
+                          </ul>
+                        </div>
+                        <div class="col-md-9">
+                          <div [ngbNavOutlet]="verticalNav"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="modal-footer">
+            <div class="hstack gap-2 justify-content-end">
+                <button type="button" class="btn btn-light" data-bs-dismiss="modal" (click)="dismissModal()">Close</button>
+                <button type="submit" class="btn btn-primary" (click)="onSubmitStudent()" id="add-btn">Save</button>
+            </div>
+        </div>
+    </ng-template>
+</div>
