fix: Update Import Students button to trigger modal for student import

--- a/src/app/pages/school/students/student-registration/student-registration.component.html
+++ b/src/app/pages/school/students/student-registration/student-registration.component.html
@@ -11,7 +11,7 @@
                     <div class="col-sm-auto">
                         <div class="d-flex flex-wrap align-items-start gap-2">
                             <button type="button" class="btn btn-primary add-btn" data-bs-toggle="modal" id="create-btn" data-bs-target="#showModal" (click)="addModal(content)"><i class="ri-user-add-line align-bottom me-1"></i> Register Student</button>
-                            <button type="button" class="btn btn-success"><i class="ri-file-excel-2-line align-bottom me-1"></i> Import Students</button>
+                            <button type="button" class="btn btn-success" (click)="addModal(content)"><i class="ri-file-excel-2-line align-bottom me-1"></i> Import Students</button>
                         </div>
                     </div>
                 </div>
